--- a/README
+++ b/README
@@ -2,4 +2,4 @@ The distributed cartesian cell-refinable grid is a parallel grid for FVM
 simulations.
 
 For installation instructions see the INSTALL file, for other documentation
-see the projects home page: dccrg.berlios.de
+see the project's home page: dccrg.berlios.de
