--- a/INSTALL
+++ b/INSTALL
@@ -2,8 +2,24 @@ dccrg is a header only library so installation consists of
 putting the .hpp files in this directory somewhere where
 your compiler can find them.
 
-dccrg requires boost::mpi and Zoltan which might be available
-from your distribution. If not you can compile them for
-example into your home directory. Installation instructions
-for several machines are given in
+dccrg requires MPI-2, boost::mpi and Zoltan which might be
+available from your distribution. If not you can compile
+them for example into your home directory. Installation
+instructions for several machines / systems are given in
 https://gitorious.org/dccrg/pages/Install
+With small modifications dccrg can also work with MPI-1,
+namely a few MPI-2 functions used by dccrg have to be
+renamed to their MPI-1 versions.
+
+Optionally dccrg can also use sfc++ which you can download
+from https://gitorious.org/sfc/sfc/blobs/raw/master/sfc++.hpp
+sfc++ is a C++ library for space-filling curves and
+dccrg can use it for initializing the grid with better
+initial cell partitioning than the default.
+sfc++ is also a header only library so just place the
+sfc++.hpp file somewhere where your compiler can find it.
+To use sfc++ in dccrg define USE_SFC when compiling a
+program using dccrg and sfc++ will be used to partition
+the initial cells between processes using a Hilber
+space-filling curve.
+
