--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+Add more documentation
+
 Make dccrg even more modular:
 -separate stateless logic (doesn't consider whether cells exist or not)
  into dccrg_index.hpp or similar with function names starting with get_.
