--- a/tests/game_of_life/README
+++ b/tests/game_of_life/README
@@ -1,21 +1,18 @@
-The game of life tests of dccrg. See the ../README file
-for information common to all tests.
+The basic test of dccrg that play Conway's game of life.
+See the ../README file for information common to all tests.
 
-Running make in this directory should produce around 20
-executables. The game_of_life_* programs serve as a basic
-test. Without additional arguments they should all print
-Passed and return successfully after less than one minute.
-
-The unrefined2d_* programs test basic adaptive mesh
-refinement functionality of dccrg. Their correctness must
-be examined by hand from the vtk files they produce when
-given the --save command line option. One should see basic
-Conway's Game of Life patterns moving through the grid or
-staying still and the grid being adapted during the runs.
+Running make test in this directory will test the basic
+functionality of dccrg automatically by running the
+most important tests using one and two MPI processes
+with mpirun. If successful all automatic tests should
+print PASSED to stdout. Edit the Makefile to use
+another program to launch the tests interactively.
+The automatic test programs game_of_life_test_* and
+unrefined2d_* also take command line arguments, run
+them with the --help argument to see supported options.
 
 The cell class in cell.hpp is an example of how to use /
 support the different mechanisms available in dccrg for
 sending cell data between processes. The Makefile shows
 which preprocessor defines must be used for specific
 functionality.
-
